; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_dbg_fw_funcs.c_ecore_dbg_set_bin_ptr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_dbg_fw_funcs.c_ecore_dbg_set_bin_ptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32* }
%struct.bin_buffer_hdr = type { i32, i32 }

@MAX_BIN_DBG_BUFFER_TYPE = common dso_local global i64 0, align 8
@s_dbg_arrays = common dso_local global %struct.TYPE_2__* null, align 8
@DBG_STATUS_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ecore_dbg_set_bin_ptr(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca %struct.bin_buffer_hdr*, align 8
  %4 = alloca i64, align 8
  store i64* %0, i64** %2, align 8
  %5 = load i64*, i64** %2, align 8
  %6 = bitcast i64* %5 to %struct.bin_buffer_hdr*
  store %struct.bin_buffer_hdr* %6, %struct.bin_buffer_hdr** %3, align 8
  store i64 0, i64* %4, align 8
  br label %7

7:                                                ; preds = %35, %1
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* @MAX_BIN_DBG_BUFFER_TYPE, align 8
  %10 = icmp ult i64 %8, %9
  br i1 %10, label %11, label %38

11:                                               ; preds = %7
  %12 = load i64*, i64** %2, align 8
  %13 = load %struct.bin_buffer_hdr*, %struct.bin_buffer_hdr** %3, align 8
  %14 = load i64, i64* %4, align 8
  %15 = getelementptr inbounds %struct.bin_buffer_hdr, %struct.bin_buffer_hdr* %13, i64 %14
  %16 = getelementptr inbounds %struct.bin_buffer_hdr, %struct.bin_buffer_hdr* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i64, i64* %12, i64 %18
  %20 = bitcast i64* %19 to i32*
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @s_dbg_arrays, align 8
  %22 = load i64, i64* %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 1
  store i32* %20, i32** %24, align 8
  %25 = load %struct.bin_buffer_hdr*, %struct.bin_buffer_hdr** %3, align 8
  %26 = load i64, i64* %4, align 8
  %27 = getelementptr inbounds %struct.bin_buffer_hdr, %struct.bin_buffer_hdr* %25, i64 %26
  %28 = getelementptr inbounds %struct.bin_buffer_hdr, %struct.bin_buffer_hdr* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @BYTES_TO_DWORDS(i32 %29)
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** @s_dbg_arrays, align 8
  %32 = load i64, i64* %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i64 %32
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  store i32 %30, i32* %34, align 8
  br label %35

35:                                               ; preds = %11
  %36 = load i64, i64* %4, align 8
  %37 = add i64 %36, 1
  store i64 %37, i64* %4, align 8
  br label %7

38:                                               ; preds = %7
  %39 = load i32, i32* @DBG_STATUS_OK, align 4
  ret i32 %39
}

declare dso_local i32 @BYTES_TO_DWORDS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
